test/negative/706_deref_nonref.fx
// expect: ref'
val x = 5
val y = *x
println(y)
